--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class=" col-md-6 col-lg-6">
                         <h1 class="aboutname">I'am Abhinav</h1>
                         <p class="aboutpara">I am studying in second year of Computer Engineering at KC College Of Engineering<br> i dont have any great hobbies but i like to watch anime and movies
-                            <br>i know some programming lanuges like C,JAVA,PYTHON<br> i havn't work on any real-life project if i get selected this will be going to my first.
+                            <br>i know some programming language like C,JAVA,PYTHON<br> i havn't work on any real-life project if i get selected this will be going to my first.
                         </p>
                     </div>
 
