--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en-gb">
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="Iuri Silva" />
