--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta http-equiv="content-language" content="pt-br" />
     <meta
       property="og:image"
-      content="https://iuricode.com/assets/image/preview.png"
+      content="https://res.cloudinary.com/dzxuucwzl/image/upload/v1681686863/portfolio_p4kcz7.png"
     />
     <meta property="og:title" content="Portfólio // Abhinavkumar Yadav" />
     <meta property="og:description" content="Portfólio // Abhinavkumar Yadav" />
