--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="keywords"
-      content="websites, web, development, frontend, Abhinavkumar Yadav, ui designer, programmer, iuricode, front-end, designer, ui, iuri, freelancer, freelancer, website, portfolio"
+      content="websites, web, development, frontend, Abhinavkumar Yadav, programmer, front-end, designer, ui, iuri, freelancer, freelancer, website, portfolio"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#00a3ff" />
@@ -162,7 +162,7 @@
               <h2 class="delaySmallReveal">Who am I<span>.</span></h2>
               <p class="delayMediumReveal">
                 My name is Abhinavkumar Yadav. I'm a freelancer as Front-end
-                developer and UI Designer. I develop modern and high quality
+                developer and Mobile Applications. I develop modern and high quality
                 interfaces, focused in performance, animations, responsiveness
                 and SEO.
               </p>
