--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
             <article id="about-text">
               <h2 class="delaySmallReveal">Who am I<span>.</span></h2>
               <p class="delayMediumReveal">
-                My name is Abhinavkumar Yadav. I'm a freelancer as Front-end
-                developer and Mobile Applications. I develop modern and high quality
+                My name is Abhinavkumar Yadav. I'm a freelancer as Full stack developer and Mobile Applications. I develop modern and high quality
                 interfaces, focused in performance, animations, responsiveness
                 and SEO.
               </p>
