--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </div>
             <div class="text-experience intervalCardReveal">
               <div>
-                <h4 class="titleExperience">Jr. Software Developer</h4>
+                <h4 class="titleExperience">Software Developer (Intern)</h4>
                 <p class="dateExperience">Jun 2021 - Dec 2022</p>
               </div>
               <h5 class="companyExperience">NextEdgeLabs</h5>
