--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               </div>
               <h5 class="companyExperience">NextEdgeLabs</h5>
               <p class="changeExperience">
-                I worked as Jr.Software Developer at NextEdgeLabs, my work
+                I worked as Software Developer (Intern) at NextEdgeLabs, my work
                 consists of Cross Platform Mobile Development, Web Applications
                 on frontend and backend using tools and frameworks like:
                 Flutter, NodeJs, Angular, MongoDB and AWS.
