Added latest Exp.

--- a/index.html
+++ b/index.html
@@ -181,12 +181,36 @@
             </div>
             <div class="text-experience intervalCardReveal">
               <div>
-                <h4 class="titleExperience">Software Developer (Intern)</h4>
+                <h4 class="titleExperience">Jr.Software Developer</h4>
                 <p class="dateExperience">Jun 2021 - Dec 2022</p>
               </div>
               <h5 class="companyExperience">NextEdgeLabs</h5>
               <p class="changeExperience">
-                I worked as Software Developer (Intern) at NextEdgeLabs, my work
+                I worked as Jr.Software Developer at NextEdgeLabs, my work
+                consists of Cross Platform Mobile Development, Web Applications
+                on frontend and backend using tools and frameworks like:
+                Flutter, NodeJs, Angular, MongoDB and AWS.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="grid-layout">
+          <h2 class="delaySmallReveal">Experience <span>.</span></h2>
+          <div id="experience">
+            <div class="option-experience intervalCardReveal">
+              <div class="digitalhouse activeExperience">
+                <h3>NextEdgeLabs</h3>
+              </div>
+            </div>
+            <div class="text-experience intervalCardReveal">
+              <div>
+                <h4 class="titleExperience">Jr.Software Developer</h4>
+                <p class="dateExperience">Jun 2021 - Dec 2022</p>
+              </div>
+              <h5 class="companyExperience">NextEdgeLabs</h5>
+              <p class="changeExperience">
+                I worked as Jr.Software Developer at NextEdgeLabs, my work
                 consists of Cross Platform Mobile Development, Web Applications
                 on frontend and backend using tools and frameworks like:
                 Flutter, NodeJs, Angular, MongoDB and AWS.
