--- a/index.html
+++ b/index.html
@@ -193,14 +193,11 @@
               </p>
             </div>
           </div>
-        </div>
 
-        <div class="grid-layout">
-          <h2 class="delaySmallReveal">Experience <span>.</span></h2>
           <div id="experience">
             <div class="option-experience intervalCardReveal">
               <div class="digitalhouse activeExperience">
-                <h3>NextEdgeLabs</h3>
+                <h3>81 Tech</h3>
               </div>
             </div>
             <div class="text-experience intervalCardReveal">
@@ -210,14 +207,18 @@
               </div>
               <h5 class="companyExperience">NextEdgeLabs</h5>
               <p class="changeExperience">
-                I worked as Jr.Software Developer at NextEdgeLabs, my work
-                consists of Cross Platform Mobile Development, Web Applications
+                I worked as Excutive Developer, my work
+                consists of Web Applications, Servers, Deployment
                 on frontend and backend using tools and frameworks like:
-                Flutter, NodeJs, Angular, MongoDB and AWS.
+                Laravel, PHP, NodeJs, Angular, MongoDB, CloutFront, CDN and AWS.
               </p>
             </div>
           </div>
+
+          
         </div>
+
+       
       </section>
 
       <section id="s-projects">
