--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
             </div>
             <div class="text-experience intervalCardReveal">
               <div>
-                <h4 class="titleExperience">Jr.Software Developer</h4>
-                <p class="dateExperience">Jun 2021 - Dec 2022</p>
+                <h4 class="titleExperience">Excutive Developer</h4>
+                <p class="dateExperience">Jun 2023</p>
               </div>
               <h5 class="companyExperience">NextEdgeLabs</h5>
               <p class="changeExperience">
