Change Company Name

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <h4 class="titleExperience">Excutive Developer</h4>
                 <p class="dateExperience">Jun 2023</p>
               </div>
-              <h5 class="companyExperience">NextEdgeLabs</h5>
+              <h5 class="companyExperience">81 Tech</h5>
               <p class="changeExperience">
                 I worked as Excutive Developer, my work
                 consists of Web Applications, Servers, Deployment
