Deployed new Version Service

--- a/index.html
+++ b/index.html
@@ -126,57 +126,80 @@
     <section id="s-experience">
       <div class="grid-layout">
         <h2 class="delaySmallReveal">Experience <span>.</span></h2>
-
+        
         <div id="experience">
-          <div class="option-experience intervalCardReveal">
-            <div class="digitalhouse activeExperience">
-              <h3>81 Tech / Shepays</h3>
-            </div>
-          </div>
-          <div class="text-experience intervalCardReveal">
-            <div>
-              <h4 class="titleExperience">Excutive Developer</h4>
-              <p class="dateExperience">Jun 2023 - Oct 2024</p>
-            </div>
-            <h5 class="companyExperience">81 Tech / Shepays</h5>
-            <p class="changeExperience">
-              I worked as Excutive Developer, my work
-              consists of Web Applications, Servers, Deployment
-              on frontend and backend using tools and frameworks like:
-              Laravel, PHP, NodeJs, Angular, MongoDB, CloutFront, CDN and AWS.
-              At Shepays, you work as a Node.js developer, building and maintaining scalable backend solutions. Your
-              responsibilities include:
-              Developing and deploying microservices with load balancers.
-              Managing MySQL databases and integrating third-party APIs.
-              Using Docker and GitLab CI/CD for efficient deployment.
-              Collaborating with frontend teams and ensuring seamless integration.
-              Debugging, optimizing performance, and staying updated with new technologies.
-              You focus on delivering robust, client-centric software solutions while contributing to the overall
-              platform's efficiency and scalability.
-            </p>
-          </div>
-        </div>
+  <div class="option-experience intervalCardReveal">
+    <div class="digitalhouse activeExperience">
+      <h3>Madrecha Solutions</h3>
+    </div>
+  </div>
+  <div class="text-experience intervalCardReveal">
+    <div>
+      <h4 class="titleExperience">Software Architect</h4>
+      <p class="dateExperience">Jan 2025 - Present</p>
+    </div>
+    <h5 class="companyExperience">Madrecha Solutions</h5>
+    <p class="changeExperience">
+      As a Software Architect at Madrecha Solutions, I led backend and infrastructure architecture 
+      for PMS and tax automation platforms using Node.js, MongoDB, and MySQL. 
+      My responsibilities included:
+      <br><br>
+      • Designing secure and scalable backend systems for multi-tenant platforms.<br>
+      • Implementing real-time features with WebSockets.<br>
+      • Managing servers across development, staging, and production environments.<br>
+      • Leveraging Redis caching to improve backend response times.<br>
+      • Automating operations through shell scripts for deployment, backups, and monitoring.<br>
+      • Collaborating with product and frontend teams to ensure smooth feature rollouts.<br>
+    </p>
+  </div>
+</div>
 
-        <div id="experience">
-          <div class="option-experience intervalCardReveal">
-            <div class="digitalhouse activeExperience">
-              <h3>NextEdgeLabs</h3>
-            </div>
-          </div>
-          <div class="text-experience intervalCardReveal">
-            <div>
-              <h4 class="titleExperience">Jr.Software Developer</h4>
-              <p class="dateExperience">Jun 2021 - Dec 2022</p>
-            </div>
-            <h5 class="companyExperience">NextEdgeLabs</h5>
-            <p class="changeExperience">
-              I worked as Jr.Software Developer at NextEdgeLabs, my work
-              consists of Cross Platform Mobile Development, Web Applications
-              on frontend and backend using tools and frameworks like:
-              Flutter, NodeJs, Angular, MongoDB and AWS.
-            </p>
-          </div>
-        </div>
+
+       <div id="experience">
+  <div class="option-experience intervalCardReveal">
+    <div class="digitalhouse activeExperience">
+      <h3>81 Tech / Shepays</h3>
+    </div>
+  </div>
+  <div class="text-experience intervalCardReveal">
+    <div>
+      <h4 class="titleExperience">Executive Developer</h4>
+      <p class="dateExperience">Jun 2023 - Oct 2024</p>
+    </div>
+    <h5 class="companyExperience">81 Tech / Shepays</h5>
+    <p class="changeExperience">
+      As an Executive Developer, I worked on both frontend and backend web applications and deployment using tools and frameworks including Laravel, PHP, Node.js, Angular, MongoDB, CloudFront, CDN, and AWS.<br><br>
+      • Developed and deployed microservices with load balancers.<br>
+      • Managed MySQL databases and integrated third-party APIs.<br>
+      • Utilized Docker and GitLab CI/CD for efficient deployment pipelines.<br>
+      • Collaborated closely with frontend teams to ensure seamless integration.<br>
+      • Debugged and optimized application performance.<br>
+      • Kept updated with emerging technologies to enhance platform scalability and robustness.<br>
+    </p>
+  </div>
+</div>
+
+<div id="experience">
+  <div class="option-experience intervalCardReveal">
+    <div class="digitalhouse activeExperience">
+      <h3>NextEdgeLabs</h3>
+    </div>
+  </div>
+  <div class="text-experience intervalCardReveal">
+    <div>
+      <h4 class="titleExperience">Jr. Software Developer</h4>
+      <p class="dateExperience">Jun 2021 - Dec 2022</p>
+    </div>
+    <h5 class="companyExperience">NextEdgeLabs</h5>
+    <p class="changeExperience">
+      I worked as a Jr. Software Developer focusing on cross-platform mobile development and web applications using Flutter, Node.js, Angular, MongoDB, and AWS.<br><br>
+      • Developed mobile and web applications for various client projects.<br>
+      • Supported backend development and integration.<br>
+      • Collaborated with cross-functional teams to deliver quality software.<br>
+    </p>
+  </div>
+</div>
+
 
 
 
@@ -184,61 +207,6 @@
       </div>
 
 
-    </section>
-
-    <section id="s-projects">
-      <div class="grid-layout">
-        <h2 class="delaySmallReveal">Projects <span>.</span></h2>
-        <div id="projects">
-          <article class="intervalCardReveal teslabank">
-            <h3>Transport Billing</h3>
-            <p>
-              Desktop Application developed in python with tkinter GUI Which
-              generate excel sheet and PDF Bills.
-            </p>
-
-            <!-- <a
-                href="https://iuricode.com/teslabank/"
-                rel="noopener"
-                target="_blank"
-                id="teslabank"
-                >Visualizar projeto
-              </a> -->
-          </article>
-
-          <article class="intervalCardReveal naped">
-            <h3>Social Media App</h3>
-            <p>
-              Created a Insta like application using Flutter where images and
-              videos can uploaded and Like, Comments feature is available for
-              all user across the platform
-            </p>
-
-            <!-- <a
-                href="https://iuricode-naped.vercel.app/"
-                rel="noopener"
-                target="_blank"
-                id="naped"
-                >Visualizar projeto
-              </a> -->
-          </article>
-
-          <article class="intervalCardReveal">
-            <h3>Project Management Web Application</h3>
-            <p>
-              A minor project management application where tasks can be
-              created and assign to other users.
-            </p>
-          </article>
-        </div>
-        <!-- <a
-            href="https://github.com/iuricode?tab=repositories"
-            rel="noopener"
-            target="_blank"
-            class="delayExtraBigReveal"
-            >Repositórios no GitHub</a
-          > -->
-      </div>
     </section>
 
     <section id="s-services">
