Deployed new Version Service

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 class="skills-icons" />
             </article>
             <article class="next intervalCardReveal">
-              <span class="skills-cards-name-low">Next.js</span>
+              <span class="skills-cards-name-low">Node.Js</span>
               <img src="assets/icons/nodejs.svg" width="60px" height="60px" alt="ícone do next" class="skills-icons" />
             </article>
             <article class="styled intervalCardReveal">
